# py-authorization

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
py_authorization/: __init__.py  authorization.py  context.py  policy.py  policy_strategy.py  policy_strategy_builder.py  sql_parser.py  user.py
src/: authorization_service.py  sql_parser.py
src/models/: check_response.py  context.py  entity_resource.py  policy.py  strategy.py
src/strategies/: ipolicy_strategy.py  policy_strategy.py  policy_strategy_builder.py
tests/: conftest.py  test_authorization.py  test_or_strategies.py  test_policy_finder.py
