[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "py_authorization"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
dependencies = ["SQLAlchemy>=1.4,<3.0"]
dynamic = ["version", "description"]


[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
